name:                ivory-tower-posix
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
copyright:           (c) 2015 Galois, Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Ivory.OS.Posix.Tower,
                       Ivory.OS.Posix.Tower.IO,
                       Ivory.OS.Posix.Tower.Signal
  other-modules:       Ivory.OS.Posix.Tower.EventLoop
  build-depends:       base >=4.7 && <5,
                       containers,
                       ivory,
                       ivory-artifact,
                       tower
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable test
  hs-source-dirs:   test
  main-is:          Simple.hs
  build-depends: base >= 4.6
               , ivory >= 0.1.0.1
               , ivory-backend-c
               , tower
               , ivory-tower-posix
  default-language: Haskell2010
  if impl(ghc >= 7.8)
    ghc-options:        -Wall -fhpc -fplugin=Ivory.Tower.SrcLoc.Plugin -fplugin-opt=Ivory.Tower.SrcLoc.Plugin:kill-foreign-stubs
  else
    ghc-options:        -Wall
