name:                ivory-tower-posix
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Ivory.OS.Posix.Tower,
                       Ivory.OS.Posix.Tower.IO,
                       Ivory.OS.Posix.Tower.Signal
  other-modules:       Ivory.OS.Posix.Tower.EventLoop
  build-depends:       base >=4.7 && <5,
                       containers,
                       ivory,
                       ivory-artifact,
                       ivory-backend-c,
                       ivory-stdlib,
                       tower
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
