name:                ivory-bsp-posix
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:     Ivory.BSP.ARMv7A.RaspberryPi.WiringPi

  other-modules:       Paths_ivory_bsp_posix

  hs-source-dirs:      src
  build-depends:       base >= 4.6,
                       array,
                       template-haskell,
                       filepath,
                       HStringTemplate,
                       ivory

  ghc-options:         -Wall

