name:                tower-posix-tests
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
copyright:           (c) 2015 Galois, Inc.
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
  build-depends:       base >=4.7 && <5,
                       base-compat >= 0.6,
                       ivory,
                       ivory-artifact,
                       ivory-backend-c,
                       ivory-stdlib,
                       tower,
                       tower-posix
  ghc-options:         -Wall
  default-language:    Haskell2010

executable test-tick-gen
  main-is:             Tick.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.7 && <5,
                       ivory,
                       tower,
                       tower-posix
  ghc-options:         -Wall
  default-language:    Haskell2010

executable test-depends-gen
  main-is:             Depends.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.7 && <5,
                       ivory,
                       tower,
                       tower-posix
  ghc-options:         -Wall
  default-language:    Haskell2010

executable test-handlers-gen
  main-is:             Handlers.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.7 && <5,
                       ivory,
                       ivory-stdlib,
                       tower,
                       tower-posix
  ghc-options:         -Wall
  default-language:    Haskell2010
